--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ license = "MIT"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+pytest-cov = "^2.11.1"
+codecov = "^2.1.11"
+python-semantic-release = "^7.15.0"
+flake8 = "^3.8.4"
+Sphinx = "^3.5.1"
+sphinxcontrib-napoleon = "^0.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
