--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-semantic-release = "^7.15.0"
 flake8 = "^3.8.4"
 Sphinx = "^3.5.1"
 sphinxcontrib-napoleon = "^0.7"
+matplotlib = "^3.3.4"
+pandas-datareader = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
