--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ Sphinx = "^3.5.1"
 sphinxcontrib-napoleon = "^0.7"
 matplotlib = "^3.3.4"
 pandas-datareader = "^0.9.0"
+pandas = "^1.2.3"
+altair = "^4.1.0"
+numpy = "^1.20.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
