--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/Users/William/opt/miniconda3/bin/python"
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    "rewrap.wrappingColumn": 79,
+    "editor.rulers": [
+        79
+    ],
 }
