--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,9 @@ numpy = "^1.20.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_variable = "<package_name>/__init__.py:__version__"
+version_source = "commit"
+upload_to_pypi = "false"
+patch_without_tag = "true"
