--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,3 +3,7 @@ sphinx==3.4.3
 sphinx_rtd_theme==0.5.1
 readthedocs-sphinx-search==0.1.0
 numpy==1.20.1
+matplotlib==3.3.4
+pandas-datareader==0.9.0
+pandas==1.2.3
+altair==4.1.0
